Add underground palettes to Sakura Hills

--- a/biomes/sakura_hills.yml
+++ b/biomes/sakura_hills.yml
@@ -11,6 +11,9 @@ variables:
 noise-equation: "-y + base + |terrain(x, y, z)| * height"
 
 palette:
+  - BEDROCK: 0
+  - BEDROCK_HALF: 2
+  - DEEPSLATE: 20
   - GRASS_VARIATION: 255
 
 flora:
