--- a/biomes/continental/wooded_steppe.yml
+++ b/biomes/continental/wooded_steppe.yml
@@ -30,6 +30,9 @@ trees:
   - density: 2
     items:
       - STEPPE_SHRUBS: 1
+    y:
+      min: 62
+      max: 255
   - density: 0.725
     items:
       - STEPPE_FLOWER_PATCH: 1
