--- a/fabric/pack.yml
+++ b/fabric/pack.yml
@@ -8,6 +8,13 @@ variables:
   prime_meridian: 0 # Z coordinate.
 
 noise:
+  manhattan: # Used for adding "peakiness" to mountains.
+    type: "FBM"
+    function:
+      type: "CELLULAR"
+      distance: "Manhattan"
+      return: "CellValue"
+      frequency: 0.0025
   terrain: # Noise used for terrain base.
     type: "EXPRESSION"
     equation: "simplex(x, y/2, z)"
@@ -24,7 +31,7 @@ noise:
 biomes:
 #  type: "PIPELINE"
   type: "SINGLE"
-  biome: "HARDWOOD_FOREST"
+  biome: "STONE_MOUNTAINS"
   resolution: 3
   blend:
     amplitude: 1.75
